--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "itertree"
 
 [dependencies]
-tiny-rng = "0.2.0"
+
+[dev-dependencies]
+rstest = "0.9.0"
