--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 readme = "README.md"
 license-file = "LICENSE"
 keywords = ["algorithm", "tree"]
+exclude = [
+    ".github/FUNDING.yml",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
