--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 license-file = "LICENSE"
 keywords = ["algorithm", "tree"]
 exclude = [
+    ".gitignore",
     ".github/FUNDING.yml",
 ]
 
